# aoc

./: .gitignore  README.md
python/: README.md  pyproject.toml  requirements.in  scratch.py
python/2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07a.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  21.py  22.py  common.py  requirements.in  template.py  time_perf.py
python/2019/: 02.py  03.py  template.py
python/2020/: 04-1.py  04-2.py
python/2021/02/: 02-1.py
python/2021/03/: scratchpad.py
python/2021/04/: bingo.py  bingo_input.py
python/2021/05/: test.py  vent_input.py  vent_mapping.py
python/2021/06/: laternfish_sim.py  test.py
python/2021/07/: crab_aligner.py  test.py
python/2021/08/: display_input.py  test.py
python/2021/09/: test.py
python/2021/10/: subsystem_input.py
python/2021/11/: octopi_sim.py
python/2021/12/: cave_input.py  test.py
python/2021/13/: input.py  test.py
python/2021/14/: input.py  (+1 more)
python/2022/: day_01.py  day_02_cleaned.py  day_02_first_solution.py  day_03.py  day_04.py  day_07.py  day_08.py  day_09_class.py  day_09_functional.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  modulo_explorations.py  notes.py  template.py
python/2023/: 02.py  04.py  07.py  10.py  11.py  12.py  13.py  15.py  16.py  19.py  20.py  23.py  24.py  25.py  common.py  time_perf.py
python/2024/: 01.py  02.py  08.py  12.py  13.py  15.py  requirements.in  runner.py  solutions.py  template.py
python/aoc/: runner.py
python/aoc_tools/: grid.py  parse.py  vector.py
(+228 files in other folders)
